finish BrandService